# beanie-fastapi-demo

./: README.md  docker-compose-mongodb.yml  pyproject.toml  run.sh
articles/: eng.md  rus.md
beanie_fastapi_demo/: app_factory.py  exceptions.py  main.py  models.py  routes.py  run.py
beanie_fastapi_demo/models/: __init__.py
beanie_fastapi_demo/routes/: __init__.py  note.py
tests/: test_beanie_fastapi_demo.py
tests/integration/: conftest.py  factory.py
tests/integration/routes/: test_note.py
