[tool.poetry]
name = "beanie-fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Roman <roman.korolev@teraki.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
beanie = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
