[tool.poetry]
name = "beanie-fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Roman <roman.korolev@teraki.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
beanie = "^1.7.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.21.1"
asgi-lifespan = "^1.0.1"
pytest-asyncio = "^0.16.0"

[tool.poetry.scripts]
beanie-fastapi-demo = 'beanie_fastapi_demo.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
